<resources>
    <string name="app_name" translatable="false">¡Días!</string>
    <string name="preference_file" translatable="false">com.andreandyp.dias.PREFERENCE_FILE_KEY</string>
    <string name="channel_id" translatable="false">alarma_channel</string>

    <string name="hora_predeterminada">±0:00</string>
    <string name="channel_nombre">Alarmas</string>
    <string name="channel_descripcion">Recibe una notificación cuando suene la alarma</string>
    <string name="buenos_dias">¡Buenos días!</string>
    <string name="apagar_alarma">Apagar alarma</string>
    <string name="posponer_alarma">Posponer alarma</string>
    <string name="hora_actual">Son las %s</string>
    <string name="alarma_sonando">Alarma sonando</string>
    <string name="posponer">Posponer</string>
    <string name="notif_id_intent">notification_id</string>
    <string name="siguiente_alarma">%d:%d</string>
    <string name="detalles_alarma">Abrir detalles de la alarma</string>
    <string name="title_activity_ajustes">Ajustes</string>

    <string name="settings">Ajustes</string>
    <string name="next_alarm_headline">Próxima alarma</string>
    <string name="no_next_alarm">Ninguna alarma programada.</string>
    <string name="origin_loading">Obteniendo datos de internet…</string>
    <string name="no_origin" />
    <string name="origin_internet">Según internet</string>
    <string name="origin_bd">Según datos de internet</string>
    <string name="origin_default">Según la hora predeterminada</string>
    <string name="turn_alarm_config">¿Encendida?</string>
    <string name="vibration_alarm_config">¿Vibrar?</string>
    <string name="choose_song_alarm_config">Escoge un tono para la alarma…</string>
    <string name="alarm_expand_desc">Expandir configuración de alarma</string>
    <string name="alarm_collapse_desc">Colapsar configuración de alarma…</string>
    <string name="api_credits">Datos obtenidos con ayuda de https://sunrise-sunset.org/api</string>
    <string name="no_ringtone_chosen">No seleccionaste ningún tono</string>
    <string name="offset_dialog_title">Escoge el desfase con respecto al amanecer</string>
    <string name="offset_dialog_hours_label">Horas:</string>
    <string name="offset_dialog_minutes_label">Minutos:</string>
    <string name="offset_dialog_before_label">Antes de</string>
    <string name="offset_dialog_after_label">Después de</string>
    <string name="offset_dialog_result_label">Desfase configurado: %s%d:%s</string>
    <string name="offset_format">%s%d:%s</string>
    <string name="offset_minutes_0">00</string>

    <!-- Preference Titles -->
    <string name="alarmas_header">Alarmas</string>
    <string name="sync_header">Sincronización en segundo plano</string>

    <!-- Alarmas Preferences -->
    <string name="hora_default_title">Hora predeterminada</string>
    <string name="hora_default_summary">Si no se puede obtener el amanecer diario,
        se considera que amanece a las %s</string>
    <string name="posponer_title">Posponer alarmas durante…</string>
    <string name="posponer_summary">%s minutos</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sincronizar en segundo plano</string>
    <string name="sync_summary_on">Se sincronizará diariamente</string>
    <string name="sync_summary_off">Solo sincronizar cuando se entra a la app</string>
    <string name="ajustes">Ajustes</string>
    <string name="tema">Tema</string>
    <string name="dark_mode_title">Modo oscuro</string>
</resources>
